--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,6 @@
 }
 
 /* common code here */
-main{
-
-}
 .section{
     height: 100vh;
     position: relative;
@@ -61,23 +58,18 @@ header{
     margin-top: 10px;
 }
 
-/* main section starts from here  */
 /* failure-section starts from here  */
 .section-img{
     position: absolute;    
-    /* height: 223px; */
     left: 150px;
     top: 123px;
     width: 569px;
-
-    /* height: 723.3px;
-    left: 228px;
-    top: 943px; */
 }
+
 .section-img .image{
-    height: 550px; 
-
+    height: 550px;
 }
+
 .section-blog{
     position: absolute;
     left: 750px;
@@ -108,41 +100,25 @@ header{
     color: #16D887;
     margin-right: 10px;
 }
-/* failure-section end here  */
-/* my-plan section starts from here  */
 
+/* my-plan section starts from here  */
 .section-heading{
-    /* position: absolute; */
     color: #151414;
     font-weight: 700;
-    font-size: 40px;
-    /* left: 610px;
-    top: 220px; */
+    font-size: 40px;    
 }
+
 .my-plans{
-    margin: 250px auto;
+    margin: 130px auto;
     width: 80%;
+    margin-bottom: 0;
     text-align: center;
 }
+
 .container{
     display: flex;
     justify-content: space-around;
     margin-top: 100px;
-    /* width: 80%; */
-    /* margin: 100px auto; */
-}
-.child{
-
-}
-
-.child-img{
-    /* position: absolute;
-    left: 319px;
-    top: 479px;  */
-
-     /* width: 92.96px;
-    height: 92.96px; */
-    
 }
 
 .child-heading{
@@ -150,12 +126,6 @@ header{
     text-align: center;
     font-weight: 700;
     font-size: 25px;
-
-    /* position: absolute;
-    width: 156px;
-    height: 35px; 
-    left: 598px;
-    top: 485px; */
 }
 
 .child-desc{
@@ -165,5 +135,134 @@ header{
     font-size: 20px;
 }
 
-/* my-plan section end here  */
+/* gradient section starts here  */
+.gradient{
+    width: 1020px;
+    height: 300px;
+    margin: 50px auto;
+    background: linear-gradient(90deg, rgba(241, 93, 34, 0.9) 20%,rgba(41, 50, 60, 0.4), rgba(241, 91, 34, .2)
+                100%);
+    border-radius: 5px;  
+}
 
+.gradient-heading{
+    font-weight: 700;
+    font-size: 40px;
+    width: 459px;
+    line-height: 47px;
+    color: #FFFFFF;
+}
+.gradient-btn{
+    font-weight: 600;
+    color: #F15B22;
+    text-align: center;
+    padding: 20px 35px;
+    border: 0;
+    margin-top: 24px;
+    border-radius: 5px;
+    font-size: 20px;
+}
+.ovarlay{
+    width: 459px;
+    height: 182px;
+    padding: 60px;
+}
+
+/* extra section starts */
+.what-i-love{
+    margin-top: 200px;
+}
+
+.what-i-love .section-title{
+    text-align: center;
+}
+
+.card-container{
+    display: flex;
+    margin-top: 80px;
+    gap: 30px;
+    padding: 100px;
+}
+
+.card{
+    box-shadow: .5px .5px 5px black;
+    text-align: center;
+    transition: all .3s;
+}
+
+.card:hover{
+    transform: scale(1.1);
+}
+
+.card-container .card-title{
+    font-size: 28px;
+    color: #151414;
+    font-weight: 700;
+}
+
+.card-container .card-sub-title{
+    line-height: 24px;
+    margin: 20px 0;
+    color: #737272;
+}
+
+.card-container .card-img{
+    height: 120px;
+    text-align: center;
+}
+
+footer{
+    display: flex;
+    background: #151414;
+}
+
+.div1{
+    padding: 100px 180px;
+}
+
+.footer-header{
+    color: #F8F8F8;
+    font-weight: 700;
+    font-size: 45px;
+    margin-bottom: 16px;
+}
+
+.footer-para{
+    color: #FFFFFF;
+    line-height: 26px;
+    margin-bottom: 24px;
+}
+
+.footer-img{
+    height: 46px;
+    margin-right: 18px;
+}
+
+.div2{
+    padding: 110px 180px;
+}
+
+.div2-header{
+    color: #FFFFFF;
+    margin-bottom: 32px;
+    font-weight: 600;
+    font-size: 25px;
+}
+
+.div2 input{
+    color: #F3F3F3;
+    margin-bottom: 16px;
+    border: 1px solid #FFFFFF;
+    padding: 20px;
+    font-size: 20px;
+    background-color: #151414;
+}
+
+.div2-btn{
+    color: #F15B22;
+    font-weight: 600;
+    font-size: 20px;
+    padding: 20px;
+    border: 0;
+    border-radius: 5px
+}
